--- a/pipelines/pipeline.yml
+++ b/pipelines/pipeline.yml
@@ -23,3 +23,37 @@ jobs:
       ENV: ((env))
     input_mapping:
       repository: repo
+
+- name: create-cluster
+  plan:
+  - in_parallel:
+    - get: repo
+      passed: [create-profiles]
+  - task: create-cluster
+    file: repo/tasks/create-cluster/task.yml
+    params:
+      OM_TARGET: ((om_target))
+      OM_CLIENT_ID: ((om_client_id))
+      OM_CLIENT_SECRET: ((om_client_secret))
+      OM_SKIP_SSL_VALIDATION: ((om_skip_ssl_validation))
+      PKS_API_ENDPOINT: ((pks_api_endpoint))
+      ENV: ((env))
+    input_mapping:
+      repository: repo
+
+- name: create-namespaces
+  plan:
+  - in_parallel:
+    - get: repo
+      passed: [create-cluster]
+  - task: create-namespaces
+    file: repo/tasks/create-namespaces/task.yml
+    params:
+      OM_TARGET: ((om_target))
+      OM_CLIENT_ID: ((om_client_id))
+      OM_CLIENT_SECRET: ((om_client_secret))
+      OM_SKIP_SSL_VALIDATION: ((om_skip_ssl_validation))
+      PKS_API_ENDPOINT: ((pks_api_endpoint))
+      ENV: ((env))
+    input_mapping:
+      repository: repo
