Fixing the inputs

--- a/environments/homelab/clusters/k8s2/cluster.yaml
+++ b/environments/homelab/clusters/k8s2/cluster.yaml
@@ -3,6 +3,6 @@ cluster:
   nodes: 3
   plan: small
   hostname: k8s2.pks.homelab.io
-  tags: ["hello:world","hello1:world1","hello2:world2"]
+  tags: "hello:world,hello1:world1,hello2:world2"
   network-profile: "dedicated"
   kubernetes-profile: ""
