Moving namespace creation under cluster.yaml

--- a/environments/homelab/clusters/k8s3/cluster.yaml
+++ b/environments/homelab/clusters/k8s3/cluster.yaml
@@ -6,3 +6,8 @@ cluster:
   tags: "hello:world,hello1:world1,hello2:world2"
   network-profile: "dedicated"
   kubernetes-profile: "etcd-encrypted-k8s-profile"
+
+  namespaces:
+  - ns1
+  - ns2
+  - ns3
