--- a/pipelines/pipeline.yml
+++ b/pipelines/pipeline.yml
@@ -82,7 +82,7 @@ jobs:
   plan:
   - in_parallel:
     - get: repo
-      passed: [create-cluster]
+      passed: [create-namespaces]
       trigger: true
   - task: delete-namespaces
     file: repo/tasks/delete-namespaces/task.yml
