--- a/tasks/create-profiles/task.yml
+++ b/tasks/create-profiles/task.yml
@@ -12,6 +12,11 @@ params:
   OM_SKIP_SSL_VALIDATION:
   PKS_API_ENDPOINT:
   ENV:
+  CREDHUB_CLIENT:
+  CREDHUB_SECRET:
+  CREDHUB_SERVER:
+  CREDHUB_CA_CERT:
+  CREDHUB_PREFIX:
 
 inputs:
 - name: repository
