--- a/environments/homelab/clusters/k8s1/cluster.yaml
+++ b/environments/homelab/clusters/k8s1/cluster.yaml
@@ -3,7 +3,7 @@ cluster:
   nodes: 3
   plan: small
   hostname: k8s1.pks.homelab.io
-  tags: "hello,hello1,hello2,cluster:k8s1"
+  tags: "cluster:k8s1,hello,hello1,hello2"
   network-profile: "default"
   kubernetes-profile: "etcd-encrypted-k8s-profile"
 
