--- a/pipelines/pipeline.yml
+++ b/pipelines/pipeline.yml
@@ -87,7 +87,7 @@ jobs:
   plan:
   - in_parallel:
     - get: repo
-      passed: [create-namespaces]
+      passed: [create-update-clusters]
       trigger: true
   - task: delete-namespaces
     file: repo/tasks/delete-namespaces/task.yml
