Addings k8s1 and compute profiles

--- a/environments/homelab/clusters/k8s1/cluster.yaml
+++ b/environments/homelab/clusters/k8s1/cluster.yaml
@@ -6,6 +6,12 @@ cluster:
   tags: "cluster:k8s1,env:dev"
   network-profile: "default"
   kubernetes-profile: "etcd-encrypted-k8s-profile"
-
+  compute-profile: 
+    name: compute-profile-1
+    node-pool:
+      - name: medium-disk
+        instance: 3
+      - name: large-disk
+        instance: 3
   namespaces:
   - ns1
