--- a/environments/homelab/clusters/k8s1/cluster.yaml
+++ b/environments/homelab/clusters/k8s1/cluster.yaml
@@ -1,15 +1,13 @@
 cluster:
   name: k8s1
-  nodes: ""
+  nodes: 3
   plan: small
   hostname: k8s1.pks.homelab.io
   tags: "cluster:k8s1,env:dev"
   network-profile: "default"
   kubernetes-profile: "etcd-encrypted-k8s-profile"
   compute-profile: 
-    name: compute-profile-1
-    node-pool:
-      - name: medium-disk
-        instance: 3
+    name: ""
+    node-pool: []
   namespaces:
   - ns1
