Updating NSX-T network profiles for tkgi

--- a/environments/homelab/network-profiles/network_profile_template.yml
+++ b/environments/homelab/network-profiles/network_profile_template.yml
@@ -13,6 +13,5 @@ parameters:
     - ((node_ip_block_ids))
   node_routable: ((node_routable))
   node_subnet_prefix: ((node_subnet_prefix))
-  nodes_dns:
-    - ((nodes_dns))
+  nodes_dns: [((nodes_dns))]
   single_tier_topology: ((single_tier_topology))
