--- a/environments/cloudlab/clusters/k8s1/cluster.yaml
+++ b/environments/cloudlab/clusters/k8s1/cluster.yaml
@@ -2,7 +2,7 @@ cluster:
   name: k8s1
   nodes: 3
   plan: small
-  hostname: k8s1.pks.cloudlab.io
+  hostname: k8s1.pks.cloudlab.local
   tags: "cluster:k8s1,env:dev"
   network-profile: ""
   kubernetes-profile: "etcd-encrypted-k8s-profile"
