--- a/environments/cloudlab/clusters/k8s3/cluster.yaml
+++ b/environments/cloudlab/clusters/k8s3/cluster.yaml
@@ -2,7 +2,7 @@ cluster:
   name: k8s3
   nodes: ""
   plan: small
-  hostname: k8s3.pks.cloudlab.io
+  hostname: k8s3.pks.cloudlab.local
   tags: "cluster:k8s3,env:prod"
   network-profile: "default"
   kubernetes-profile: ""
